--- a/src/app/api/send-mail/templates/template_customer.html
+++ b/src/app/api/send-mail/templates/template_customer.html
@@ -11,6 +11,7 @@
       padding: 0;
       line-height: 1.2;
       background: #fcfcfc;
+      color: #e77000;
       color: lab(60.3514% 40.5624 87.1228);
       font-family: 'Open Sans', sans-serif;
     "
@@ -23,7 +24,8 @@
         padding: 48px 32px;
         background: #fff;
         border-radius: 8px;
-        border-top: 2px solid lab(60.3514% 40.5624 87.1228);
+        border-top: 2px solid #e77000; /* fallback */
+        border-top: 2px solid lab(60.3514% 40.5624 87.1228); /* nowoczesny */
         box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
           0 2px 4px -2px rgba(0, 0, 0, 0.1);
       "
@@ -31,6 +33,7 @@
       <a
         href="https://warung-sumatra.pl"
         style="
+          color: #e77000;
           color: lab(60.3514% 40.5624 87.1228);
           text-decoration: underline;
           display: block;
@@ -46,7 +49,9 @@
 
       <h1 style="color: #003566; text-align: center; font-size: 28px">
         #welcome
-        <strong style="color: lab(60.3514% 40.5624 87.1228)">#name</strong>
+        <strong style="color: #e77000; color: lab(60.3514% 40.5624 87.1228)"
+          >#name</strong
+        >
       </h1>
       <h2
         style="
@@ -105,6 +110,7 @@
             margin: 0 0 0.2rem 0;
             padding: 0;
             font-weight: 500;
+            color: #e77000;
             color: lab(60.3514% 40.5624 87.1228);
           "
           target="_blank"
