--- a/src/app/api/send-mail/templates/template_receiver.html
+++ b/src/app/api/send-mail/templates/template_receiver.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="NurByte.com" />
     <title>Warung Sumatra</title>
   </head>
   <body
@@ -12,7 +13,6 @@
       line-height: 1.2;
       background: #fcfcfc;
       color: #e77000;
-      color: lab(60.3514% 40.5624 87.1228);
       font-family: 'Open Sans', sans-serif;
     "
   >
@@ -24,8 +24,7 @@
         padding: 48px 32px;
         background: #fff;
         border-radius: 8px;
-        border-top: 2px solid #e77000; /* fallback */
-        border-top: 2px solid lab(60.3514% 40.5624 87.1228); /* nowoczesny */
+        border-top: 2px solid #e77000;
         box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
           0 2px 4px -2px rgba(0, 0, 0, 0.1);
       "
@@ -34,7 +33,6 @@
         href="https://warung-sumatra.pl"
         style="
           color: #e77000;
-          color: lab(60.3514% 40.5624 87.1228);
           text-decoration: underline;
           display: block;
           margin: 0 auto;
@@ -47,11 +45,16 @@
         />
       </a>
 
-      <h1 style="color: #003566; text-align: center; font-size: 28px">
-        Otrzymałaś wiadomość od
-        <strong style="color: #e77000; color: lab(60.3514% 40.5624 87.1228)"
-          >#name</strong
-        >
+      <h1
+        style="
+          color: #003566;
+          text-align: center;
+          font-size: 28px;
+          font-weight: 500;
+        "
+      >
+        Nowa wiadomość od
+        <strong style="color: #e77000">#name</strong>
       </h1>
 
       <h2
@@ -59,17 +62,12 @@
           color: #003566;
           margin-bottom: 8px;
           font-size: 16px;
-          font-weight: 600;
+          font-weight: 500;
         "
       >
         Email:
         <a
-          style="
-            color: #e77000;
-            color: lab(60.3514% 40.5624 87.1228);
-            text-decoration: none;
-            font-weight: bold;
-          "
+          style="color: #e77000; text-decoration: none; font-weight: bold"
           href="mailto:#email"
           >#email</a
         >
