--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,6 +69,18 @@ div {
   font-family: var(--font-permanent-marker);
 }
 
+.font-inter {
+  font-family: var(--font-inter);
+}
+
+.font-poppins {
+  font-family: var(--font-poppins);
+}
+
+.font-montserrat {
+  font-family: var(--font-montserrat);
+}
+
 .batik-pattern {
   background-image: url("/batik/padang_red.png");
   background-size: 60px 60px, 40px 40px, 30px 30px;
